@@ -1,0 +1,2 @@
+<h3>Not Allowed</h3>
+<p>You are not allowed permission to access this page<p>
